--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -425,7 +425,9 @@ mark {
 }
 
 /* currency converter ends */
-
+.heading_block_margin{
+  margin-top: 140px;
+}
 
 @media screen and (min-width: 992px) {
 
