--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -429,6 +429,12 @@ mark {
   margin-top: 140px;
 }
 
+.table_title{
+  font-size: 24px;
+  color: var(--bs-primary);
+  font-family: var(--bs-font-heading-family);
+}
+
 @media screen and (min-width: 992px) {
 
   .dropdown-menu {
@@ -1751,30 +1757,34 @@ input[type=search]::-webkit-search-results-decoration {
 /* 2.14 - Table - Start
 ================================================== */
 .table {
+
   background-color: var(--bs-white);
   box-shadow: 0 3px 14px 0 rgba(12, 1, 13, 0.1); }
   .table thead {
-    font-size: 24px;
-    line-height: 34px;
-    color: var(--bs-heading-color);
+    font-size: 16px;
+    line-height: 1.3;
+    color: var(--bs-body-bg);
     font-family: var(--bs-heading-font-family); }
     .table thead th {
-      padding: 24px 70px;
+      padding: 24px 30px;
+  font-family: var(--bs-font-heading-family);
+      color: var(--bs-body-bg);
       background-color: var(--bs-secondary); }
       .table thead th:not(:first-child) {
-        text-align: center; }
+        text-align: left;
+       }
   .table td {
-    font-size: 20px;
+    font-size: 14px;
     font-weight: 500;
     line-height: 28px;
-    padding: 16px 70px;
+    font-family: var(--bs-font-heading-family);
+    padding: 14px 30px;
     background-color: transparent;
     color: var(--bs-heading-color); }
     .table td:not(:first-child) {
-      text-align: center; }
+      text-align: left; }
 
 .table_wrapper table {
-  border-radius: 20px;
   box-shadow: 0 3px 15px 0 rgba(12, 1, 13, 0.03); }
 
 /* 2.14 - Table - End
@@ -6264,6 +6274,11 @@ Responsive For Mobile & Tablet Devices
   .hero_car_insurance {
     background-size: 0%; }
 
+  .table{
+    caption-side: bottom;
+    width: 100%;
+    border-collapse: collapse;
+  }
   .table thead th {
     padding: 20px 50px; }
 
@@ -6372,6 +6387,7 @@ Responsive For Mobile & Tablet Devices
 
   .hero_car_insurance .hero_car {
     display: none; } }
+
 /* Media Screen 991px - End
 ================================================== */
 /* Media Screen 767px - Start
