--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -646,6 +646,7 @@ mark {
   padding-bottom: 140px; }
   .section_space_2 {
     margin-top: 100px;
+    padding-bottom: 100px !important;
     margin-bottom: 0px; }
 /* 2.03 - Template Gapping or Spacing - End
 ================================================== */
@@ -4782,6 +4783,11 @@ input[type=search]::-webkit-search-results-decoration {
   font-size: 40px;
   line-height: 54px;
   margin: 60px 0 18px; }
+  .item_details_info_heading_secondary{
+    font-size: 20px;
+    line-height: 54px;
+    margin: 60px 0 18px;
+  }
 
 .blog_details_section .item_details_content {
   --bs-border-color: #D2D9DA; }
