--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,11 +2,11 @@
 /* Table Of Content - start
 ================================================== */
 /* 
-* Project Name   :  Synox – Finance & Consulting Site Template.
+* Project Name   :  PerryLeo – Breaking borders, one payment at a time
 * File           :  CSS Base
 * Version        :  1.0.0
-* Author         :  XpressBuddy (https://themeforest.net/user/xpressbuddy/portfolio)
-* Developer			 :	webrok (https://www.fiverr.com/webrok?up_rollout=true)
+* Author         :  Djeffsource 
+* Developer			 :	Djeffsource
 
 ==================================================
 
@@ -5484,7 +5484,7 @@ input[type=search]::-webkit-search-results-decoration {
 /* 
 Responsive For Mobile & Tablet Devices
 ================================================== 
-* Project Name   :  Synox – Finance & Consulting Site Template.
+* Project Name   :  PerryLeo – Breaking borders, one payment at a time
 * File           :  CSS Base
 * Version        :  1.0.0
 * Author         :  XpressBuddy (https://themeforest.net/user/xpressbuddy/portfolio)
