--- a/assets/scss/_responsive.scss
+++ b/assets/scss/_responsive.scss
@@ -1,11 +1,11 @@
 /* 
 Responsive For Mobile & Tablet Devices
 ================================================== 
-* Project Name   :  Synox – Finance & Consulting Site Template.
+* Project Name   : PerryLeo – Breaking borders, one payment at a time
 * File           :  CSS Base
 * Version        :  1.0.0
-* Author         :  XpressBuddy (https://themeforest.net/user/xpressbuddy/portfolio)
-* Developer			 :	webrok (https://www.fiverr.com/webrok?up_rollout=true)
+* Author         :  Djeffsource
+* Developer			 :	Djeffsource
 *	CSS code for responsive layout To make responsive
 ================================================== 
 */
